Fixed Column Wrap in Projects and added box-shadow

--- a/css/styles.css
+++ b/css/styles.css
@@ -404,6 +404,10 @@ SKILLS
     color: #fff;
 } */
 
+.card:nth-child(5n+1) {
+    clear: left;
+}
+
 .card:nth-child(2) .inner-card .progress-bar {
     background: linear-gradient(90deg, #e0e0e0 0%, #f0f0f0 100%);
     box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
@@ -765,7 +769,7 @@ PROJECTS
     padding: 10px 15px 35px 15px;
     background: #282c34;
     color: #abb2bf;
-    border-radius: 12px;
+    /* border-radius: 12px; */
     margin-bottom: -18px;
     font-family: 'Fira Code', monospace;
     font-size: 12px;
@@ -787,6 +791,8 @@ PROJECTS
     position: relative;
     overflow: hidden;
     margin-bottom: 30px;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.6);
+    border-radius: 12px;
 }
 
 .project-item:hover {
